--- a/h_b.html
+++ b/h_b.html
@@ -153,8 +153,8 @@
 <div class="container" id="category_banner" >
     <a id="category_back_home" href="./main.html">ebay</a>
     <span>></span>
-    <span id="category_text">Beauty</span>
-    <h2>Beauty</h2>
+    <span id="category_text">Health &amp; Beauty</span>
+    <h2>Health &amp; Beauty</h2>
     <img id="category_banner_img" src="./img/category/zhou/h_b.jpg" alt="">
 </div>
 <div class="container" id="main_category_display">
